# py-shinylive-deploy-webserver

./: .gitignore  README.md  entrypoint.sh  pyproject.toml  shiny_deploy.toml  shinylive_deploy.toml
.github/workflows/: publish-python.yml  python-publish.yml
dev/: shinylive_deploy.toml
dev/test_webserver/: main.py
shinylive_deploy/: deploy.py  main.py  models.py
src/: shinylive_pscp_deploy.py
src/shinylive_deploy/: app.py  config.py  data.py
src/shinylive_deploy/models/: __init__.py  base.py  local.py  server.py
src/shinylive_deploy/process/: __init__.py  base.py  local.py  server.py
src_dev/app1/: app.py
src_dev/app2/: app.py
testing/: Dockerfile  entrypoint.sh  tests_readme.md
testing/src/: app.py
testing/src/module/: __init__.py
testing/src/module2/subdir/: __init__.py
testing/test/: conftest.py  test__app.py  test__base.py  test__data.py  test__local.py  test__server.py  test__windows_workaround.py
testing/test/sample_files/: windows_path_app.json
